--- a/custom_components/aula/translations/da.json
+++ b/custom_components/aula/translations/da.json
@@ -26,7 +26,8 @@
           "username": "Unilogin brugernavn",
           "password": "Unilogin password",
           "schoolschedule": "Tilføj skoleskemaer som kalender entiteter?",
-          "ugeplan": "Tilføj ugeplaner som sensor attributter?"
+          "ugeplan": "Tilføj ugeplaner som sensor attributter?",
+          "rawugeplan": "Use raw JSON for ugeplaner data?"
         },
         "description": "Indtast dine Unilogin oplysninger",
         "title": "Login"
@@ -49,7 +50,8 @@
       "options": {
         "data": {
           "schoolschedule": "Tilføj skoleskemaer som kalender entiteter?",
-          "ugeplan": "Tilføj ugeplaner som sensor attributter?"
+          "ugeplan": "Tilføj ugeplaner som sensor attributter?",
+          "rawugeplan": "Use raw JSON for ugeplaner data?"
         },
         "description": "",
         "title": "Login"
