--- a/custom_components/aula/translations/en.json
+++ b/custom_components/aula/translations/en.json
@@ -26,8 +26,7 @@
           "username": "Unilogin username",
           "password": "Unilogin password",
           "schoolschedule": "Add school schedules as calendar entities?",
-          "ugeplan": "Add ugeplaner as sensor attributes?",
-          "rawugeplan": "Use raw JSON for ugeplaner data?"
+          "ugeplan": "Add ugeplaner as sensor attributes?"
         },
         "description": "Enter your Unilogin credentials",
         "title": "Authentication"
@@ -50,8 +49,7 @@
       "options": {
         "data": {
           "schoolschedule": "Add school schedules as calendar entities?",
-          "ugeplan": "Add ugeplaner as sensor attributes?",
-          "rawugeplan": "Use raw JSON for ugeplaner data?"
+          "ugeplan": "Add ugeplaner as sensor attributes?"
         },
         "description": "",
         "title": "Options"
