tidied strings.json

--- a/custom_components/aula/translations/da.json
+++ b/custom_components/aula/translations/da.json
@@ -26,32 +26,11 @@
           "username": "Unilogin brugernavn",
           "password": "Unilogin password",
           "schoolschedule": "Tilføj skoleskemaer som kalender entiteter?",
-          "ugeplan": "Tilføj ugeplaner som sensor attributter?"
+          "ugeplan": "Tilføj ugeplaner som sensor attributter?",
+          "parse_easyiq_ugeplan": "Tilføj EasyIQ ugeplan som sensor attributter?",
+          "easyid_ugeplan_calendar": "Tilføj EasyIQ ugeplan som kalender?"
         },
         "description": "Indtast dine Unilogin oplysninger",
-        "title": "Login"
-      }
-    }
-  },
-  "options": {
-    "error": {
-      "1": "Unknown error"
-    },
-    "step": {
-      "user": {
-        "data": {
-          "username": "Unilogin brugernavn",
-          "password": "Unilogin password"
-        },
-        "description": "Indtast dine Unilogin oplysninger",
-        "title": "Login"
-      },
-      "options": {
-        "data": {
-          "schoolschedule": "Tilføj skoleskemaer som kalender entiteter?",
-          "ugeplan": "Tilføj ugeplaner som sensor attributter?"
-        },
-        "description": "",
         "title": "Login"
       }
     }
